<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/cardView">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/habito3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:text="@string/tituloh3"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/terceroh"
            android:textSize="35dp"
            android:layout_marginTop="15dp"
            android:text="@string/habitoh3"
            android:id="@+id/textView4" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        android:layout_below="@+id/cardView"
        android:layout_alignStart="@+id/cardView"
        android:id="@+id/cardView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcionh3"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:id="@+id/textView7" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/terceroh"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:textAlignment="textEnd"
            android:text="@string/vermas"/>


    </android.support.v7.widget.CardView>







</RelativeLayout>
    </ScrollView>